# python-example-module

./: .gitignore  README.md  pyproject.toml  setup.py
fakeutils/: name_faker.py
tests/: test_name_faker.py
