[tool.poetry]
name = "python-example-module"
version = "0.1.0"
description = "Example for learning how to create a Python package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_example_module"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
