[project]
name = "fakeutils"
version = "0.1.1"

[tool.poetry]
name = "python-example-module"
version = "0.1.1"
description = "Example for learning how to create a Python package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
faker = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

